--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "network-calculator",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Network Calculator",
   "author": {
     "name": "Mert Kahyaoğlu",
     "email": "mertkahyaoglu93@gmail.com",
-    "url": "mertkahyaoglu.github.io"
+    "url": "http://mert-kahyaoglu.com/"
   },
   "repository": "mertkahyaoglu/network-calculator",
   "license": "MIT",
@@ -24,19 +24,22 @@
   ],
   "dependencies": {
     "chalk": "^0.5.1",
+    "grunt": "^1.0.1",
     "meow": "^2.0.0",
     "repeating": "^1.1.1",
     "validate-ip": "^1.0.1"
   },
   "devDependencies": {
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
+    "ava": "^0.17.0",
+    "grunt-ava": "^0.15.0",
+    "grunt-contrib-jshint": "1.1.0",
+    "grunt-contrib-nodeunit": "1.0.0",
     "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^1.0.0",
-    "time-grunt": "^1.0.0",
-    "grunt-mocha-cli": "^1.11.0",
-    "jshint-stylish": "^1.0.0"
+    "grunt-mocha": "^1.0.2",
+    "jshint-stylish": "^1.0.0",
+    "load-grunt-tasks": "3.5.2",
+    "mocha": "^1.13.0",
+    "time-grunt": "1.4.0"
   },
   "scripts": {
     "test": "grunt"
