--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 sudo: false
 language: node_js
 node_js:
-  - 'iojs'
   - '6'
   - '5'
   - '4'
-cache:
-  directories:
-    - node_modules
+cache: yarn
