--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "ava": "^0.17.0",
+    "grunt": "^0.4.0",
     "grunt-ava": "^0.15.0",
     "grunt-contrib-jshint": "1.1.0",
     "grunt-contrib-nodeunit": "1.0.0",
