--- a/package.json
+++ b/package.json
@@ -23,24 +23,24 @@
     "cli"
   ],
   "dependencies": {
-    "chalk": "^0.5.1",
-    "grunt": "^1.0.1",
-    "meow": "^2.0.0",
-    "repeating": "^1.1.1",
+    "chalk": "^1.1.3",
+    "grunt": "^0.4.5",
+    "meow": "^3.7.0",
+    "repeating": "^3.0.0",
     "validate-ip": "^1.0.1"
   },
   "devDependencies": {
     "ava": "^0.17.0",
-    "grunt": "^0.4.0",
+    "grunt": "^0.4.5",
     "grunt-ava": "^0.15.0",
-    "grunt-contrib-jshint": "1.1.0",
-    "grunt-contrib-nodeunit": "1.0.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha": "^1.0.2",
-    "jshint-stylish": "^1.0.0",
-    "load-grunt-tasks": "3.5.2",
-    "mocha": "^1.13.0",
-    "time-grunt": "1.4.0"
+    "jshint-stylish": "^2.2.1",
+    "load-grunt-tasks": "^3.5.2",
+    "mocha": "^3.2.0",
+    "time-grunt": "^1.4.0"
   },
   "scripts": {
     "test": "grunt"
